--- a/Laboratorio3/db/Lab3.lpc.html
+++ b/Laboratorio3/db/Lab3.lpc.html
@@ -16,6 +16,198 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >gameFSM|dispShipsP</TD>
+<TD >4</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >6</TD>
+<TD >14</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >gameFSM|check_lose</TD>
+<TD >75</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >gameFSM|dispShipsE</TD>
+<TD >4</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >6</TD>
+<TD >14</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >gameFSM|check_win</TD>
+<TD >75</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >gameFSM|ePlay</TD>
+<TD >77</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >76</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >gameFSM|pPlay</TD>
+<TD >84</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >76</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >gameFSM|dispTimer</TD>
+<TD >4</TD>
+<TD >5</TD>
+<TD >0</TD>
+<TD >5</TD>
+<TD >14</TD>
+<TD >5</TD>
+<TD >5</TD>
+<TD >5</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >gameFSM|timer</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >gameFSM|env_ships</TD>
+<TD >80</TD>
+<TD >0</TD>
+<TD >75</TD>
+<TD >0</TD>
+<TD >76</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >gameFSM|player_ships</TD>
+<TD >87</TD>
+<TD >0</TD>
+<TD >75</TD>
+<TD >0</TD>
+<TD >76</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >gameFSM|boxSel</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >gameFSM</TD>
+<TD >11</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >2</TD>
+<TD >200</TD>
+<TD >2</TD>
+<TD >2</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >VGA|dib|draw_mux</TD>
 <TD >1251</TD>
 <TD >0</TD>
@@ -33,14 +225,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion49</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -49,14 +241,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion48</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -65,14 +257,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion47</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -81,14 +273,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion46</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -97,14 +289,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion45</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -113,14 +305,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion44</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -129,14 +321,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion43</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -145,14 +337,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion42</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -161,14 +353,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion41</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -177,14 +369,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion40</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -193,14 +385,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion39</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -209,14 +401,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion38</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -225,14 +417,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion37</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -241,14 +433,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion36</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -257,14 +449,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion35</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -273,14 +465,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion34</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -289,14 +481,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion33</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -305,14 +497,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion32</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -321,14 +513,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion31</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -337,14 +529,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion30</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -353,14 +545,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion29</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -369,14 +561,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion28</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -385,14 +577,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion27</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -401,14 +593,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion26</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -417,14 +609,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion25</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -433,14 +625,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion24</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -449,14 +641,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion23</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -465,14 +657,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion22</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -481,14 +673,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion21</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -497,14 +689,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion20</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -513,14 +705,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion19</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -529,14 +721,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion18</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -545,14 +737,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion17</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -561,14 +753,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion16</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -577,14 +769,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion15</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -593,14 +785,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion14</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -609,14 +801,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion13</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -625,14 +817,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion12</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -641,14 +833,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion11</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -657,14 +849,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion10</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -673,14 +865,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion9</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -689,14 +881,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion8</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -705,14 +897,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion7</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -721,14 +913,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion6</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -737,14 +929,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion5</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -753,14 +945,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion4</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -769,14 +961,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion3</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -785,14 +977,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion2</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -801,14 +993,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion1</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -817,14 +1009,14 @@
 </TR>
 <TR >
 <TD >VGA|dib|posicion0</TD>
-<TD >51</TD>
-<TD >73</TD>
-<TD >2</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >4</TD>
 <TD >24</TD>
-<TD >73</TD>
-<TD >73</TD>
-<TD >73</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -849,7 +1041,7 @@
 </TR>
 <TR >
 <TD >VGA|dib</TD>
-<TD >73</TD>
+<TD >173</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >3</TD>
@@ -897,14 +1089,30 @@
 </TR>
 <TR >
 <TD >VGA</TD>
-<TD >51</TD>
-<TD >50</TD>
+<TD >151</TD>
 <TD >0</TD>
-<TD >50</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >29</TD>
-<TD >50</TD>
-<TD >50</TD>
-<TD >50</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >div</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
